Updated RedditBot link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			<div class="heading">Past Work</div>
 			<div class="body">
 				<p>...</p>
+				<div class="shoOnHover">
+					<li class="item1"><a href="https://github.com/natejcho/Reddit_Bot">Reddit Bot (Python)</li>
 			</div>
 		</div>
 
@@ -40,10 +42,9 @@
 			<div class="body">
 					<p>...</p>
 					<div class="showOnHover">
-						<li class="item3"><a href="https://www.youtube.com/playlist?list=PLxi0CwktpgxYBPxVkr2mr5mYP4U2NRUI6">Reddit Bot (Python)</a></li>
-						<li class="item4"><a href="">C++ Text Adventure</a></li>
-						<li class="item5"><a href="">Drive Chrome Extension</a></li>
-						<li class="item2"><a href="">FrontEnd Tutorials (Javascript)</a></li>
+						<li class="item1"><a href="">C++ Text Adventure</a></li>
+						<li class="item2"><a href="">Drive Chrome Extension</a></li>
+						<li class="item3"><a href="">FrontEnd Tutorials (Javascript)</a></li>
 						<a href="#" class="btn btn-xs btn-warning">REQUESTS</a>
 					</div>
 			</div>
