Need more revision

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<p>...</p>
 				<div class="shoOnHover">
 					<li class="item1"><a href="https://github.com/natejcho/Reddit_Bot">Reddit Bot (Python)</li>
+				</div>
 			</div>
 		</div>
 
