--- a/index.html
+++ b/index.html
@@ -1,62 +1,92 @@
-<!doctype html>
+<!doctype>
 <html>
 
-	<head>
-		<title>Nathaniel Cho</title>
-		<link rel="stylesheet" href="main_1.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-teme.min.css">
-	</head>
+  <head>
+    <title>Nathaniel Cho</title>
 
-	<body>
+    <link rel="stylesheet" type="text/css" href="site.css" media="screen" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-		<div class="container">
-			<div class="row">
-				<div class="jumbotron">
-					<h1 class="name">nathaniel cho</h1r>
-				</div>
-			</div>
-		</div>
+  </head>
 
-		<div class="myPanel">
-			<div class="heading">Past Work</div>
-			<div class="body">
-				<p>...</p>
-				<div class="shoOnHover">
-					<li class="item1"><a href="https://github.com/natejcho/Reddit_Bot">Reddit Bot (Python)</li>
-				</div>
-			</div>
-		</div>
+  <body class="site">
 
-		<div class="myPanel">
-			<div class="heading">What I'm Working on Now</div>
-			<div class="body">
-					<p>...</p>
-					<div class="showOnHover">
-						<li class="item1"><a href="Index_1.html">This Site</a></li>
-					</div>
-			</div>
-		</div>
+    <div class="container">
+      <div class="jumbotron other_color">
+        <h1 id="name">Nathaniel Cho</h1>
+      </div>
+    </div>
 
-		<div class="myPanel">
-			<div class="heading">Future Projects</div>
-			<div class="body">
-					<p>...</p>
-					<div class="showOnHover">
-						<li class="item1"><a href="">C++ Text Adventure</a></li>
-						<li class="item2"><a href="">Drive Chrome Extension</a></li>
-						<li class="item3"><a href="">FrontEnd Tutorials (Javascript)</a></li>
-						<a href="#" class="btn btn-xs btn-warning">REQUESTS</a>
-					</div>
-			</div>
-			</div>
-		</div>
+    <div class="container">
 
+      <a name="Works"></a>
+      <div class="myPanel">
+        <div class="panel-heading panel-olive">
+          <h3 class="panel-title">Works</h3>
+        </div>
+        <div class="panel-body">
+          <li><a href="https://github.com/natejcho/Reddit_Bot">Reddit Bot</a></li>
+        </div>
+      </div>
 
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-		</div>
+      <a name="Developing"></a>
+      <div class="myPanel">
+        <div class="panel-heading panel-olive">
+          <h3 class="panel-title">Developing</h3>
+        </div>
+        <div class="panel-body">
+          <li><a href="http://www.ibm.com/developerworks/opensource/library/os-extendchrome/index.html">My First Chrome Extension</a></li>
+          <li><a href="index.html">Portfolio</a></li>
+        </div>
+      </div>
 
-	</body>
+      <a name="Projects"></a>
+      <div class="myPanel">
+        <div class="panel-heading panel-olive">
+          <h3 class="panel-title">Projects</h3>
+        </div>
+        <div class="panel-body">
+          <li><a href="https://www.youtube.com/watch?v=31cxmLN09ss&index=1&list=PLgLZvFga2ml7bvlhOWD8BbuU8314sh0Dj">Java</a></li>
+          <li><a href="https://www.youtube.com/watch?v=hMxGhHNOkCU">JQuery</a></li>
+        </div>
+      </div>
+
+    </div>
+
+    <nav class="navbar navbar-inverse navbar-fixed-bottom">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">
+            <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
+          </a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="#Works">Works</a></li>
+            <li><a href="#Developing">Developing</a></li>
+            <li><a href="#Projects">Projects</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+  </body>
 
 </html>
